Port Lost Cities to Fabric for Minecraft 26.2, update dependencies, and refactor JSON configurations